tests/baselines/reference/es6ModuleInternalImport.errors.txt
es6ModuleInternalImport.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
es6ModuleInternalImport.ts(7,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
es6ModuleInternalImport.ts(13,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== es6ModuleInternalImport.ts (3 errors) ====
    export module m {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var a = 10;
    }
    export import a1 = m.a;
    import a2 = m.a;
    var x = a1 + a2;
    export module m1 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export import a3 = m.a;
        import a4 = m.a;
        var x = a1 + a2;
        var x2 = a3 + a4;
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export import a3 = m.a;
        import a4 = m.a;
        var x = a1 + a2;
        var x2 = a3 + a4;
        var x4 = m1.a3 + m2.a3;
    }